<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="text_heading">My Nanodegree Apps!</string>
    <string name="text_spotify_streamer">Spotify Streamer</string>
    <string name="text_scores_app">Scores App</string>
    <string name="text_library_app">Library App</string>
    <string name="text_build_it_bigger">Build It Bigger</string>
    <string name="text_xyz_reader">XYZ Reader</string>
    <string name="text_capstone_my_own_app">Capstone: My Own App</string>
</resources>

