<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:background="#E0F7FA"
                tools:context=".MainActivity">

    <TextView
        android:id="@+id/text_heading"
        android:text="@string/text_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:textSize="24sp"
        />

    <Button
        android:id="@+id/btn_app1"
        android:layout_below="@+id/text_heading"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dimen_30dp"
        android:layout_width="@dimen/dimen_250dp"
        android:layout_height="wrap_content"
        android:text="@string/text_spotify_streamer"
        android:background="@drawable/button_custom"
        android:textSize="16sp"
        />

    <Button
        android:id="@+id/btn_app2"
        android:layout_below="@+id/btn_app1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:layout_width="@dimen/dimen_250dp"
        android:layout_height="wrap_content"
        android:text="@string/text_scores_app"
        android:background="@drawable/button_custom"
        android:textSize="16sp"
        />

    <Button
        android:id="@+id/btn_app3"
        android:layout_below="@+id/btn_app2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:layout_width="@dimen/dimen_250dp"
        android:layout_height="wrap_content"
        android:text="@string/text_library_app"
        android:background="@drawable/button_custom"
        android:textSize="16sp"
        />

    <Button
        android:id="@+id/btn_app4"
        android:layout_below="@+id/btn_app3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:layout_width="@dimen/dimen_250dp"
        android:layout_height="wrap_content"
        android:text="@string/text_build_it_bigger"
        android:background="@drawable/button_custom"
        android:textSize="16sp"
        />

    <Button
        android:id="@+id/btn_app5"
        android:layout_below="@+id/btn_app4"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:layout_width="@dimen/dimen_250dp"
        android:layout_height="wrap_content"
        android:text="@string/text_xyz_reader"
        android:background="@drawable/button_custom"
        android:textSize="16sp"
        />

    <Button
        android:id="@+id/btn_app6"
        android:layout_below="@+id/btn_app5"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:layout_width="@dimen/dimen_250dp"
        android:layout_height="wrap_content"
        android:text="@string/text_capstone_my_own_app"
        android:background="@drawable/button_custom"
        android:textSize="16sp"
        />

</RelativeLayout>
